# INDRA-LLM

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci copy.yml  ci.yml
configs/: dataset.yaml
data/processed/tiny_shakespeare/: vocab.json
data/raw/: readme.txt
research/: active_research_topics.md  reference_research_papers.txt 
research/rough/: roadmap.txt
src/config/: loader.txt
src/config/schemas/: dataset.py
src/data/: downloader.py
src/data/processed/tiny_shakespeare/: val.pt
src/indra_llm/config/: loader.py
src/indra_llm/config/schemas/: dataset.py
src/indra_llm/data/: dataset.py  downloader.py  manager.py
src/indra_llm/preprocessing/: preprocessing.py
src/indra_llm/tokenizer/: character_level_tokenizer.py
src/tokenizer/: character_level_tokenizer.py
