[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "indra-llm"
version = "0.1.0"
description = "A GPT-style Large Language Model implemented from scratch."
readme = "README.md"
requires-python = ">=3.11"

keywords = [
    "llm",
    "gpt",
    "transformer",
    "deep-learning",
    "pytorch"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    "torch>=2.3",
    "numpy>=2.0",
    "PyYAML>=6.0",
    "pydantic>=2.11",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "black>=24.0",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


# Ruff
[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]

# Black
[tool.black]
line-length = 88
target-version = ["py311"]


# MyPy
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

# Pytest
[tool.pytest.ini_options]
testpaths = ["tests"]

pythonpath = [
    "src",
]
